<resources>
    <string name="app_name">TicketToRide</string>


    <!--MAIN ACTIVITY-->

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>


    <!--GAME LIST-->

    <string name="joinAGame">JOIN A GAME</string>
    <string name="startAGame">START A GAME</string>
    <string name="gameHint">Name of game</string>
    <string name="createGame">Create game</string>


    <!--GAME LOBBY-->

    <string name="welcome">Welcome to</string>
    <string name="gameNamePlaceholder">Game Name</string>
    <string name="waiting">Waiting for players…</string>

    <string name="one">1.</string>
    <string name="two">2.</string>
    <string name="three">3.</string>
    <string name="four">4.</string>
    <string name="five">5.</string>

    <string name="startGame">Start Game</string>


    <!--GAME LIST ITEM-->

    <string name="joinButton">Join</string>

    <string name="status_waiting">Waiting</string>
    <string name="status_started">Started</string>

    <string name="zero_five">0/5</string>
    <string name="one_five">1/5</string>
    <string name="two_five">2/5</string>
    <string name="three_five">3/5</string>
    <string name="four_five">4/5</string>
    <string name="five_five">5/5</string>


    <!--GAME-->

    <string name="welcomeText">THIS IS THE GAME</string>

        <!--LEFT SIDE-->
    <string name="playerPlaceholer">Player Name</string>
    <string name="scoreLabel">Score:</string>
    <string name="startingScore">0</string>
    <string name="trainsLabel">Trains:</string>
    <string name="startingTrains">45</string>

        <!--CARDS-->
    <string name="cardTab">Card</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="black">Black</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="white">White</string>
    <string name="wild">Wild</string>

    <string name="colon">:</string>

        <!--DESTINATIONS-->
    <string name="destTab">Dest.</string>

    <string name="city1">City 1</string>
    <string name="city2">City 2</string>
    <string name="dash">-</string>
    <string name="eight">8</string>

        <!--RIGHT SIDE-->

        <!--CHAT-->
    <string name="chatTab">Chat</string>

        <!--HISTORY-->
    <string name="historyTab">Hist.</string>


    <!--Buttons-->
    <string name="drawTrains">Draw Trains</string>
    <string name="placeTrains">Place Trains</string>
    <string name="drawDestinations">Draw Destinations</string>
    <string name="startingDestinations">30</string>

    <!-- DIALOGS -->
    <string name="ok">OK</string>
    <string name="cancel">BACK</string>
    <string name="draw_train">Pick a Train</string>
    <string name="draw">DRAW</string>
    <string name="deck">Deck</string>
    <string name="starting_train_cards">144</string>
    <string name="left_paren">(</string>
    <string name="right_paren">)</string>

    <!-- PLAYER INFO -->
    <string name="playerInfo">Player Information</string>
    <string name="player">Player</string>
    <string name="points">Points</string>
    <string name="num_trains"># Trains</string>
    <string name="num_cards"># Cards</string>
    <string name="num_dest"># Destinations</string>

    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="player5">Player 5</string>

    <string name="turnLight">turn light</string>

    <string name="claimRoute">Claim a route</string>

    <!--GAME OVER-->
    <string name="game_over">GAME OVER</string>
    <string name="the_winner_is">The winner is:</string>
    <string name="WINNER">WINNER</string>
    <string name="dest_points">+DC</string>
    <string name="dest_lost">-DC</string>
    <string name="longest_path">Longest Path</string>

</resources>
