<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/destination_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/city1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/city1"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:text="@string/dash"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/city1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/city2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:text="@string/city2"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/dash"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:text="@string/colon"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/city2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:text="@string/eight"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/colon"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>