<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/game_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="15dp"
        android:text="@string/gameNamePlaceholder"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/number_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/name"
        android:text="@string/zero_five" />

    <TextView
        android:id="@+id/status"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/number_players"
        android:text="@string/status_waiting"
        android:textAlignment="center" />

    <Button
        android:id="@+id/join_button"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/joinButton" />

</RelativeLayout>