<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/WINNER"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/winner">

        <TableRow
            android:id="@+id/labels"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:paddingEnd="25dp"
            android:paddingBottom="5dp"
            android:visibility="visible">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/player" />

            <TextView
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/points"
                android:textAlignment="center" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/dest_points"
                android:textAlignment="center" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/dest_lost"
                android:textAlignment="center" />

            <TextView
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/longest_path" />


        </TableRow>

        <TableRow
            android:id="@+id/player1_row"
            android:paddingStart="25dp"
            android:paddingTop="5dp"
            android:paddingEnd="25dp"
            android:paddingBottom="5dp"
            android:visibility="visible">


            <TextView
                android:id="@+id/player1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/player1"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/player1_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/player1_dest_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/player1_dest_lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/player1_lp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:id="@+id/player2_row"
            android:paddingStart="25dp"
            android:paddingTop="5dp"
            android:paddingEnd="25dp"
            android:paddingBottom="5dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/player2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/player2" />

            <TextView
                android:id="@+id/player2_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/player2_dest_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/player2_dest_lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/player2_lp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:id="@+id/player3_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingStart="25dp"
            android:paddingTop="5dp"
            android:paddingEnd="25dp"
            android:paddingBottom="5dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/player3_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/player3" />

            <TextView
                android:id="@+id/player3_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/player3_dest_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/player3_dest_lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/player3_lp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:id="@+id/player4_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingStart="25dp"
            android:paddingTop="5dp"
            android:paddingEnd="25dp"
            android:paddingBottom="5dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/player4_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/player4" />

            <TextView
                android:id="@+id/player4_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/player4_dest_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/player4_dest_lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/player4_lp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:id="@+id/player5_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingStart="25dp"
            android:paddingTop="5dp"
            android:paddingEnd="25dp"
            android:paddingBottom="5dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/player5_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/player5" />

            <TextView
                android:id="@+id/player5_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/player5_dest_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/player5_dest_lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/player5_lp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/startingScore"
                android:textAlignment="center" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/the_winner_is"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>